# MyTravel

./: .pylintrc  pyproject.toml  setup.cfg
alembic/: env.py
alembic/versions/: 2025_01_28_2220-052f8f15f6eb_init.py
app/: config.py  main.py
app/bot/: create_bot.py
app/bot/handlers/: admin_router.py  user_router.py
app/bot/keyboards/: kbs.py
app/core/: config.py  dao.py  database.py  models.py
app/pages/: router.py
