[project]
name = "mytravel"
version = "0.1.0"
description = ""
authors = [
    {name = "Станислав Рубцов",email = "frexrub@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.7,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
pylint = "^3.3.3"
mypy = "^1.14.1"
isort = "^5.13.2"
flake8-bugbear = "^24.12.12"
pep8-naming = "^0.14.1"

